--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "angular-favicon": "^1.0.8",
     "chart.js": "^3.7.1",
     "firebase": "^9.6.9",
     "ng2-charts": "^3.0.8",
